--- a/TODO
+++ b/TODO
@@ -8,16 +8,16 @@ ia qui auto complete
 facturation?
 
 
-route  -> assignement note ->  associer les assignement avec un professeur/eleve
+ok route  -> assignement note ->  associer les assignement avec un professeur/eleve
 -> changer la couleur en fonction du status
 -> bouton pour imprimer
--> ajouter categorie matiere exercice p-cascadeSelect
--> reaction à un devoir (<p-rating)
+ok -> ajouter categorie matiere exercice p-cascadeSelect
+non -> reaction à un devoir (<p-rating)
 ok -> un assignement peut etre bloquer par son propriaitaire pour empecher les autres professeurs de le modifier p-toggleButton
 ok -> assignement p-editor InputSwitch MultiSelect
 ok -> filtre : p-calendar p-dropdown InputSwitch MultiSelect
 -> account -> p-password
--> onglet avec p-table qui resume le nombre d'assignement par categorie/eleve/professeur
+ok -> onglet avec p-table qui resume le nombre d'assignement par categorie/eleve/professeur
 -> onglet p-organizationChart ou p-treeTable pour voir quel exercice dans quel matiere avec que l professeur
 ok -> confirmpopup pour suprression ok
 -> FileUpload pour uploader des fichiers
